# DjangoOnDocker

./: .env  .env.dev  .env.prod  .gitignore  README.md  do_by_hand.txt  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
app/DjangoOnDocker/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
